--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,10 @@ import BuyBanner from '../components/BuyBanner.astro'
     slot="meta"
   />
 
-  <Title text={['The', 'DIY Multideck']} class="mb-4 sm:mb-8" />
+  <Title
+    text={['The', 'DIY Multideck', 'official website']}
+    class="mb-4 sm:mb-8"
+  />
 
   <nav class="grid sm:grid-cols-2 gap-4">
     <LinkCard
