--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -3,7 +3,6 @@ import BlogPostMeta from '../../components/BlogPostMeta.astro'
 import ContentLayout from '../../layouts/ContentLayout.astro'
 import { getCollection, getEntry } from 'astro:content'
 import Prose from '../../components/Prose.astro'
-import { absoluteUrlOptional } from '../../lib/url'
 
 export async function getStaticPaths() {
   const posts = await getCollection('blog')
@@ -32,7 +31,7 @@ const { Content } = await entry.render()
     description={data.description}
     publishDate={data.date.toISOString()}
     pagePath={`/blog/${slug}`}
-    ogImageAbsoluteUrl={absoluteUrlOptional(data.ogImagePath)}
+    ogImageAbsoluteUrl={new URL(data.ogImagePath, Astro.site).toString()}
     slot="meta"
   />
   <Prose>
