--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,7 +17,7 @@ const { class: className } = Astro.props
     <span>by</span>
     <a
       class="unset gradient-link tracking-wider font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#008bb1] to-[#1476ff] hover:after:bg-gradient-to-r hover:after:from-[#0090b7] hover:after:to-[#1476ff]"
-      href="https://mauriciabad.com"
+      href="https://mauri.app"
       target="_blank"
     >
       Maurici Abad</a
