Link to github in the footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,6 +22,15 @@ const { class: className } = Astro.props
     >
       Maurici Abad</a
     ><span>.</span>
+     Check out the
+    <a
+      class="unset gradient-link tracking-wider font-bold bg-clip-text text-transparent bg-gradient-to-r from-orange-500 via-rose-500 to-red-500 hover:after:bg-gradient-to-r hover:after:from-orange-500 hover:after:via-rose-500 hover:after:to-red-500"
+      href="https://github.com/mauriciabad/diy-multideck-website"
+      target="_blank"
+    >
+      <i class="ti ti-terminal text-base text-gray-500" aria-label="GitHub"></i>
+       Source code
+    </a>
   </div>
 </footer>
 
