--- a/src/pages/shop.astro
+++ b/src/pages/shop.astro
@@ -32,9 +32,12 @@ const games = await getCollection('games', (p) => p.data.post.draft !== true)
     <div>
       <h2 class="font-bold mt-4">Price</h2>
       <p class="mb-1">
-        <strong>30 €</strong> + shipping costs.
+        <strong>35 €</strong> + shipping costs.
       </p>
-      <p class="mb-4">🚚 Barcelona 0€, Spain 3€, Europe 7€, anywhere else 11€. <span class="italic">It goes by weight, so 2 decks cost the double.</span></p>
+      <p class="mb-4">
+        🚚 Barcelona 0€, Spain 3€, Europe 7€, anywhere else 11€. <span
+          class="italic">It goes by weight, so 2 decks cost the double.</span>
+      </p>
 
       <h2 class="font-bold mt-4">What's included</h2>
       <ul class="unset list-disc pl-4">
