Use actual icons in changelog

--- a/src/components/markdown/ColorSuit.astro
+++ b/src/components/markdown/ColorSuit.astro
@@ -1,5 +1,5 @@
 ---
-import { getColorBySuitId, type SuitColorId, type SuitColor } from './suits'
+import { type SuitColor } from './suits'
 
 export interface Props {
   color?: SuitColor
