--- a/src/components/PageMeta.astro
+++ b/src/components/PageMeta.astro
@@ -77,3 +77,6 @@ const { meta, og, twitter } = getPageMeta({
   )
 }
 <!-- {twitter.url && <meta property="twitter:url" content={twitter.url} />} -->
+
+<!-- Sitemap -->
+<link rel="sitemap" href="/sitemap-index.xml" />
