Fix google analytics warning

--- a/src/layouts/GoogleAnalytics.astro
+++ b/src/layouts/GoogleAnalytics.astro
@@ -4,9 +4,11 @@
 
 <Fragment>
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-M6KQHNY94C"
-  ></script>
-  <script>
+  <script
+    is:inline
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-M6KQHNY94C"></script>
+  <script is:inline>
     // @ts-nocheck
     document.addEventListener('astro:page-load', () => {
       window.dataLayer = window.dataLayer || []
