Move home images

--- a/src/components/markdown/images/TravelKitComponents.astro
+++ b/src/components/markdown/images/TravelKitComponents.astro
@@ -2422,7 +2422,7 @@
     </defs>
   </svg>
   <img
-    src="/images/home/travel-kit.png"
+    src="/images/home-v1/travel-kit.png"
     alt="Travel kit components"
     class="absolute inset-0 opacity-0"
     loading="lazy"
