Update Drawing areas img

--- a/src/components/markdown/images/DrawingImgV1.astro
+++ b/src/components/markdown/images/DrawingImgV1.astro
@@ -3,7 +3,7 @@ import CardImg from './CardImg.astro'
 ---
 
 <div class="flex flex-wrap justify-center gap-6 mb-4 flex-col sm:flex-row">
-  <CardImg src="/images/home/drawing/drawing-areas.svg" class="m-0" />
+  <CardImg src="/images/home-v1/drawing/drawing-areas.png" class="m-0" />
   <div class="flex justify-center gap-4 flex-wrap items-center sm:flex-col">
     <svg
       class="h-32"
