Add png version to the counters

--- a/src/components/markdown/images/CardAnatomyImg.astro
+++ b/src/components/markdown/images/CardAnatomyImg.astro
@@ -3,7 +3,7 @@
 ---
 
 <div
-  class="relative w-full max-w-5xl mx-auto prose-img:my-0 text-black dark:text-white"
+  class="relative w-full max-w-5xl mx-auto not-prose text-black dark:text-white"
 >
   <svg
     fill="none"
