--- a/src/components/markdown/images/CardAnatomyImgV1.astro
+++ b/src/components/markdown/images/CardAnatomyImgV1.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div class="relative w-full max-w-5xl mx-auto prose-img:my-0">
+<div class="relative w-full max-w-5xl mx-auto not-prose">
   <svg fill="none" class="w-full block" viewBox="0 0 2590 2044">
     <path
       fill="currentColor"
