--- a/src/components/markdown/images/TravelKitComponentsImgV1.astro
+++ b/src/components/markdown/images/TravelKitComponentsImgV1.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div class="relative w-full max-w-5xl mx-auto prose-img:my-0">
+<div class="relative w-full max-w-5xl mx-auto not-prose">
   <svg
     class="w-full block"
     viewBox="0 0 3264 1264"
