--- a/src/components/markdown/Img.astro
+++ b/src/components/markdown/Img.astro
@@ -1,16 +1,20 @@
 ---
+import { cn } from '../../lib/cn'
+
 interface Props {
   src: string
   width?: number | string
   alt?: string
+  class?: string
 }
 
-const { src, width, alt } = Astro.props
+const { src, width, alt, class: className } = Astro.props
 ---
 
 <img
   src={src}
   style={{ maxWidth: typeof width === 'string' ? width : `${width}px` }}
   alt={alt}
-  class="mx-auto block w-full"
+  class={cn('mx-auto block w-full', className)}
+  loading="lazy"
 />
