Add Manrope font

--- a/src/layouts/GoogleFont.astro
+++ b/src/layouts/GoogleFont.astro
@@ -39,132 +39,6 @@
 <Fragment>
   <link
     rel="preload"
-    href="/fonts/Inter-Thin.woff2?v=3.19"
-    as="font"
-    type="font/woff2"
-    crossorigin="crossorigin"
-  />
-  <link
-    rel="preload"
-    href="/fonts/Inter-ThinItalic.woff2?v=3.19"
-    as="font"
-    type="font/woff2"
-    crossorigin="crossorigin"
-  />
-  <link
-    rel="preload"
-    href="/fonts/Inter-ExtraLight.woff2?v=3.19"
-    as="font"
-    type="font/woff2"
-    crossorigin="crossorigin"
-  />
-  <link
-    rel="preload"
-    href="/fonts/Inter-ExtraLightItalic.woff2?v=3.19"
-    as="font"
-    type="font/woff2"
-    crossorigin="crossorigin"
-  />
-  <link
-    rel="preload"
-    href="/fonts/Inter-Light.woff2?v=3.19"
-    as="font"
-    type="font/woff2"
-    crossorigin="crossorigin"
-  />
-  <link
-    rel="preload"
-    href="/fonts/Inter-LightItalic.woff2?v=3.19"
-    as="font"
-    type="font/woff2"
-    crossorigin="crossorigin"
-  />
-  <link
-    rel="preload"
-    href="/fonts/Inter-Regular.woff2?v=3.19"
-    as="font"
-    type="font/woff2"
-    crossorigin="crossorigin"
-  />
-  <link
-    rel="preload"
-    href="/fonts/Inter-Italic.woff2?v=3.19"
-    as="font"
-    type="font/woff2"
-    crossorigin="crossorigin"
-  />
-  <link
-    rel="preload"
-    href="/fonts/Inter-Medium.woff2?v=3.19"
-    as="font"
-    type="font/woff2"
-    crossorigin="crossorigin"
-  />
-  <link
-    rel="preload"
-    href="/fonts/Inter-MediumItalic.woff2?v=3.19"
-    as="font"
-    type="font/woff2"
-    crossorigin="crossorigin"
-  />
-  <link
-    rel="preload"
-    href="/fonts/Inter-SemiBold.woff2?v=3.19"
-    as="font"
-    type="font/woff2"
-    crossorigin="crossorigin"
-  />
-  <link
-    rel="preload"
-    href="/fonts/Inter-SemiBoldItalic.woff2?v=3.19"
-    as="font"
-    type="font/woff2"
-    crossorigin="crossorigin"
-  />
-  <link
-    rel="preload"
-    href="/fonts/Inter-Bold.woff2?v=3.19"
-    as="font"
-    type="font/woff2"
-    crossorigin="crossorigin"
-  />
-  <link
-    rel="preload"
-    href="/fonts/Inter-BoldItalic.woff2?v=3.19"
-    as="font"
-    type="font/woff2"
-    crossorigin="crossorigin"
-  />
-  <link
-    rel="preload"
-    href="/fonts/Inter-ExtraBold.woff2?v=3.19"
-    as="font"
-    type="font/woff2"
-    crossorigin="crossorigin"
-  />
-  <link
-    rel="preload"
-    href="/fonts/Inter-ExtraBoldItalic.woff2?v=3.19"
-    as="font"
-    type="font/woff2"
-    crossorigin="crossorigin"
-  />
-  <link
-    rel="preload"
-    href="/fonts/Inter-Black.woff2?v=3.19"
-    as="font"
-    type="font/woff2"
-    crossorigin="crossorigin"
-  />
-  <link
-    rel="preload"
-    href="/fonts/Inter-BlackItalic.woff2?v=3.19"
-    as="font"
-    type="font/woff2"
-    crossorigin="crossorigin"
-  />
-  <link
-    rel="preload"
     href="/fonts/Inter-roman.var.woff2?v=3.19"
     as="font"
     type="font/woff2"
@@ -184,178 +58,14 @@
     type="font/woff2"
     crossorigin="crossorigin"
   />
-  <style is:inline>
-    @font-face {
-      font-family: 'Inter';
-      font-style: normal;
-      font-weight: 100;
-      font-display: swap;
-      src:
-        url('/fonts/Inter-Thin.woff2?v=3.19') format('woff2'),
-        url('/fonts/Inter-Thin.woff?v=3.19') format('woff');
-    }
-    @font-face {
-      font-family: 'Inter';
-      font-style: italic;
-      font-weight: 100;
-      font-display: swap;
-      src:
-        url('/fonts/Inter-ThinItalic.woff2?v=3.19') format('woff2'),
-        url('/fonts/Inter-ThinItalic.woff?v=3.19') format('woff');
-    }
-
-    @font-face {
-      font-family: 'Inter';
-      font-style: normal;
-      font-weight: 200;
-      font-display: swap;
-      src:
-        url('/fonts/Inter-ExtraLight.woff2?v=3.19') format('woff2'),
-        url('/fonts/Inter-ExtraLight.woff?v=3.19') format('woff');
-    }
-    @font-face {
-      font-family: 'Inter';
-      font-style: italic;
-      font-weight: 200;
-      font-display: swap;
-      src:
-        url('/fonts/Inter-ExtraLightItalic.woff2?v=3.19') format('woff2'),
-        url('/fonts/Inter-ExtraLightItalic.woff?v=3.19') format('woff');
-    }
-
-    @font-face {
-      font-family: 'Inter';
-      font-style: normal;
-      font-weight: 300;
-      font-display: swap;
-      src:
-        url('/fonts/Inter-Light.woff2?v=3.19') format('woff2'),
-        url('/fonts/Inter-Light.woff?v=3.19') format('woff');
-    }
-    @font-face {
-      font-family: 'Inter';
-      font-style: italic;
-      font-weight: 300;
-      font-display: swap;
-      src:
-        url('/fonts/Inter-LightItalic.woff2?v=3.19') format('woff2'),
-        url('/fonts/Inter-LightItalic.woff?v=3.19') format('woff');
-    }
-
-    @font-face {
-      font-family: 'Inter';
-      font-style: normal;
-      font-weight: 400;
-      font-display: swap;
-      src:
-        url('/fonts/Inter-Regular.woff2?v=3.19') format('woff2'),
-        url('/fonts/Inter-Regular.woff?v=3.19') format('woff');
-    }
-    @font-face {
-      font-family: 'Inter';
-      font-style: italic;
-      font-weight: 400;
-      font-display: swap;
-      src:
-        url('/fonts/Inter-Italic.woff2?v=3.19') format('woff2'),
-        url('/fonts/Inter-Italic.woff?v=3.19') format('woff');
-    }
-
-    @font-face {
-      font-family: 'Inter';
-      font-style: normal;
-      font-weight: 500;
-      font-display: swap;
-      src:
-        url('/fonts/Inter-Medium.woff2?v=3.19') format('woff2'),
-        url('/fonts/Inter-Medium.woff?v=3.19') format('woff');
-    }
-    @font-face {
-      font-family: 'Inter';
-      font-style: italic;
-      font-weight: 500;
-      font-display: swap;
-      src:
-        url('/fonts/Inter-MediumItalic.woff2?v=3.19') format('woff2'),
-        url('/fonts/Inter-MediumItalic.woff?v=3.19') format('woff');
-    }
-
-    @font-face {
-      font-family: 'Inter';
-      font-style: normal;
-      font-weight: 600;
-      font-display: swap;
-      src:
-        url('/fonts/Inter-SemiBold.woff2?v=3.19') format('woff2'),
-        url('/fonts/Inter-SemiBold.woff?v=3.19') format('woff');
-    }
-    @font-face {
-      font-family: 'Inter';
-      font-style: italic;
-      font-weight: 600;
-      font-display: swap;
-      src:
-        url('/fonts/Inter-SemiBoldItalic.woff2?v=3.19') format('woff2'),
-        url('/fonts/Inter-SemiBoldItalic.woff?v=3.19') format('woff');
-    }
-
-    @font-face {
-      font-family: 'Inter';
-      font-style: normal;
-      font-weight: 700;
-      font-display: swap;
-      src:
-        url('/fonts/Inter-Bold.woff2?v=3.19') format('woff2'),
-        url('/fonts/Inter-Bold.woff?v=3.19') format('woff');
-    }
-    @font-face {
-      font-family: 'Inter';
-      font-style: italic;
-      font-weight: 700;
-      font-display: swap;
-      src:
-        url('/fonts/Inter-BoldItalic.woff2?v=3.19') format('woff2'),
-        url('/fonts/Inter-BoldItalic.woff?v=3.19') format('woff');
-    }
-
-    @font-face {
-      font-family: 'Inter';
-      font-style: normal;
-      font-weight: 800;
-      font-display: swap;
-      src:
-        url('/fonts/Inter-ExtraBold.woff2?v=3.19') format('woff2'),
-        url('/fonts/Inter-ExtraBold.woff?v=3.19') format('woff');
-    }
-    @font-face {
-      font-family: 'Inter';
-      font-style: italic;
-      font-weight: 800;
-      font-display: swap;
-      src:
-        url('/fonts/Inter-ExtraBoldItalic.woff2?v=3.19') format('woff2'),
-        url('/fonts/Inter-ExtraBoldItalic.woff?v=3.19') format('woff');
-    }
-
-    @font-face {
-      font-family: 'Inter';
-      font-style: normal;
-      font-weight: 900;
-      font-display: swap;
-      src:
-        url('/fonts/Inter-Black.woff2?v=3.19') format('woff2'),
-        url('/fonts/Inter-Black.woff?v=3.19') format('woff');
-    }
-    @font-face {
-      font-family: 'Inter';
-      font-style: italic;
-      font-weight: 900;
-      font-display: swap;
-      src:
-        url('/fonts/Inter-BlackItalic.woff2?v=3.19') format('woff2'),
-        url('/fonts/Inter-BlackItalic.woff?v=3.19') format('woff');
-    }
-
+  <link
+    rel="preload"
+    href="/fonts/Manrope-VariableFont_wght.ttf"
+    as="font"
+    type="font/ttf"
+    crossorigin="crossorigin"
+  />
+  <style is:global>
     /* -------------------------------------------------------
 Variable font.
 Usage:
@@ -383,24 +93,34 @@ Usage:
     }
 
     /* --------------------------------------------------------------------------
-[EXPERIMENTAL] Multi-axis, single variable font.
-
-Slant axis is not yet widely supported (as of February 2019) and thus this
-multi-axis single variable font is opt-in rather than the default.
-
-When using this, you will probably need to set font-variation-settings
-explicitly, e.g.
-
-  * { font-variation-settings: "slnt" 0deg }
-  .italic { font-variation-settings: "slnt" 10deg }
-
-*/
+    [EXPERIMENTAL] Multi-axis, single variable font.
+    
+    Slant axis is not yet widely supported (as of February 2019) and thus this
+    multi-axis single variable font is opt-in rather than the default.
+    
+    When using this, you will probably need to set font-variation-settings
+    explicitly, e.g.
+    
+    * { font-variation-settings: "slnt" 0deg }
+    .italic { font-variation-settings: "slnt" 10deg }
+    
+    */
     @font-face {
       font-family: 'Inter var experimental';
       font-weight: 100 900;
       font-display: swap;
       font-style: oblique 0deg 10deg;
       src: url('/fonts/Inter.var.woff2?v=3.19') format('woff2');
+    }
+    /* -------------------------------------------------------------------------- */
+
+    @font-face {
+      font-family: 'Manrope';
+      font-weight: 200 800;
+      font-display: swap;
+      font-style: normal;
+      font-named-instance: 'Regular';
+      src: url('/fonts/Manrope-VariableFont_wght.ttf') format('truetype');
     }
   </style>
 </Fragment>
