use textured-white

--- a/src/components/markdown/CardDistributionTable.astro
+++ b/src/components/markdown/CardDistributionTable.astro
@@ -7,6 +7,7 @@ import ShapeSuit from './ShapeSuit.astro'
 import ColorSuit from './ColorSuit.astro'
 import { insertBetween } from '../../lib/arrays'
 
+// prettier-ignore
 const rows = [
   ['🔥', '0', '❤️', '0', 'heart', 'textured-red', '00'],
   ['🔥', '1', '❤️', '1', 'heart', 'textured-red', '01'],
@@ -148,16 +149,16 @@ const rows = [
   ['🍆', 'Q', '⚫️', '7', 'circle', 'textured-black', '137'],
   ['🍆', 'K', '⚫️', '8', 'circle', 'textured-black', '138'],
   ['🍆', 'A', '⚫️', '9', 'circle', 'textured-black', '139'],
-  ['⭐', 'X', '🔲', '0', 'circle/square', 'white/textured-black', '140'],
-  ['⭐', 'J', '🔲', '1', 'circle/square', 'white/textured-black', '141'],
-  ['⭐', 'Q', '🔲', '2', 'circle/square', 'white/textured-black', '142'],
-  ['⭐', 'K', '🔲', '3', 'circle/square', 'white/textured-black', '143'],
-  ['⭐', 'A', '🔲', '4', 'circle/square', 'white/textured-black', '144'],
-  ['💭', 'X', '🔲', '5', 'circle/square', 'white/textured-black', '145'],
-  ['💭', 'J', '🔲', '6', 'circle/square', 'white/textured-black', '146'],
-  ['💭', 'Q', '🔲', '7', 'circle/square', 'white/textured-black', '147'],
-  ['💭', 'K', '🔲', '8', 'circle/square', 'white/textured-black', '148'],
-  ['💭', 'A', '🔲', '9', 'circle/square', 'white/textured-black', '149'],
+  ['⭐', 'X', '🔲', '0', 'circle/square', 'textured-white/textured-black', '140'],
+  ['⭐', 'J', '🔲', '1', 'circle/square', 'textured-white/textured-black', '141'],
+  ['⭐', 'Q', '🔲', '2', 'circle/square', 'textured-white/textured-black', '142'],
+  ['⭐', 'K', '🔲', '3', 'circle/square', 'textured-white/textured-black', '143'],
+  ['⭐', 'A', '🔲', '4', 'circle/square', 'textured-white/textured-black', '144'],
+  ['💭', 'X', '🔲', '5', 'circle/square', 'textured-white/textured-black', '145'],
+  ['💭', 'J', '🔲', '6', 'circle/square', 'textured-white/textured-black', '146'],
+  ['💭', 'Q', '🔲', '7', 'circle/square', 'textured-white/textured-black', '147'],
+  ['💭', 'K', '🔲', '8', 'circle/square', 'textured-white/textured-black', '148'],
+  ['💭', 'A', '🔲', '9', 'circle/square', 'textured-white/textured-black', '149'],
   ['☘️', 'X', '🤍', '0', 'heart', 'textured-white', '150'],
   ['☘️', 'J', '🤍', '1', 'heart', 'textured-white', '151'],
   ['☘️', 'Q', '🤍', '2', 'heart', 'textured-white', '152'],
