--- a/src/pages/manual.astro
+++ b/src/pages/manual.astro
@@ -15,7 +15,7 @@ const filteredHeadings = headings.filter(
   ({ depth, text }) =>
     !(
       depth >= 2 &&
-      (text === 'Layout' ||
+      (text === 'Game-mapping sheet' ||
         text === 'Suits' ||
         text === 'Ranks' ||
         text === 'Distributions')
