--- a/src/components/PageMeta.astro
+++ b/src/components/PageMeta.astro
@@ -17,7 +17,7 @@ const {
   title,
   description,
   publishDate,
-  ogImageAbsoluteUrl = new URL('/images/og.png', Astro.site).toString(),
+  ogImageAbsoluteUrl = new URL('/images/ogimage.png', Astro.site).toString(),
   ogImageAltText,
   ogImageWidth,
   ogImageHeight,
