--- a/src/layouts/TablerIcons.astro
+++ b/src/layouts/TablerIcons.astro
@@ -5,6 +5,6 @@
 <Fragment>
   <link
     rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/@tabler/icons@latest/iconfont/tabler-icons.min.css"
+    href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css"
   />
 </Fragment>
