Define type and structure for mapping variants

--- a/src/components/GameMappingDetails.astro
+++ b/src/components/GameMappingDetails.astro
@@ -1,5 +1,5 @@
 ---
-import type { GameInfo } from '../lib/schemas'
+import type { GameInfo } from '../lib/schemas/game'
 import { getCompatibility } from '../utils/compatibility'
 
 interface Props {
