--- a/src/pages/games/[slug].astro
+++ b/src/pages/games/[slug].astro
@@ -1,9 +1,10 @@
 ---
-import GameMappingDetails from '../../components/GameMappingDetails.astro'
-import ContentLayout from '../../layouts/ContentLayout.astro'
-import GamePostMeta from '../../components/GamePostMeta.astro'
 import { getCollection, getEntry } from 'astro:content'
+import GameMappingDetails from '../../components/GameMappingDetails.astro'
+import GamePostMeta from '../../components/GamePostMeta.astro'
 import Prose from '../../components/Prose.astro'
+import MappingTableVariants from '../../components/markdown/MappingTableVariants.astro'
+import ContentLayout from '../../layouts/ContentLayout.astro'
 
 export async function getStaticPaths() {
   const posts = await getCollection('games')
@@ -22,6 +23,8 @@ if (typeof slug !== 'string') {
 
 const entry = await getEntry('games', slug)
 const { game, post, mapping } = entry.data
+
+const resolvedMappings = await getEntry('gameMappings', slug)
 
 const { Content } = await entry.render()
 ---
@@ -43,4 +46,5 @@ const { Content } = await entry.render()
   <Prose>
     <Content />
   </Prose>
+  {resolvedMappings && <MappingTableVariants mapping={resolvedMappings.data} />}
 </ContentLayout>
