--- a/src/pages/games/[slug].astro
+++ b/src/pages/games/[slug].astro
@@ -3,7 +3,7 @@ import { getCollection, getEntry } from 'astro:content'
 import GameMappingDetails from '../../components/GameMappingDetails.astro'
 import GamePostMeta from '../../components/GamePostMeta.astro'
 import Prose from '../../components/Prose.astro'
-import MappingTableVariants from '../../components/markdown/MappingTableVariants.astro'
+import { MappingTableVariants } from '../../components/react/MappingTableVariants'
 import ContentLayout from '../../layouts/ContentLayout.astro'
 
 export async function getStaticPaths() {
@@ -46,5 +46,9 @@ const { Content } = await entry.render()
   <Prose>
     <Content />
   </Prose>
-  {resolvedMappings && <MappingTableVariants mapping={resolvedMappings.data} />}
+  {
+    resolvedMappings && (
+      <MappingTableVariants client:load mapping={resolvedMappings.data} />
+    )
+  }
 </ContentLayout>
