--- a/src/pages/games/[slug].astro
+++ b/src/pages/games/[slug].astro
@@ -43,12 +43,18 @@ const { Content } = await entry.render()
     slot="meta"
   />
   <GameMappingDetails game={game} mapping={mapping} slug={slug} />
+  {
+    resolvedMappings && (
+      <MappingTableVariants
+        client:load
+        mapping={resolvedMappings.data}
+        classNames={{
+          container: 'mt-8',
+        }}
+      />
+    )
+  }
   <Prose>
     <Content />
   </Prose>
-  {
-    resolvedMappings && (
-      <MappingTableVariants client:load mapping={resolvedMappings.data} />
-    )
-  }
 </ContentLayout>
